Tendril: Fix minor layout issues

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -165,6 +165,8 @@ body {
     flex: 1 0 auto;
     width: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
 
     svg {
       flex: 1 0 auto;
